--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.4.2",
     "@midudev/tailwind-animations": "^0.0.7",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "recoil": "^0.7.7",
     "yup": "^1.4.0"
