--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
